--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Better Days</h1>
     <h2>By Patrick Jayoma</h2>
-    <p>My animation is about myself reflecting back on what I enjoy doing which is traveling and exploring, however because of the pandemic I can only reflect on a computer.</p>
+    <p>My animation is about myself reflecting back on what I enjoy doing, which is traveling and exploring. However because of the pandemic I can only reflect on a computer.</p>
     <!--Code for video-->
     <video controls width="750">
     <source src="Media/Final_Jayoma.mp4" type="video/mp4">
